--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,16 +1,33 @@
-NAME=phonebook
-CC=c++
-CFLAGS=-Wall -Wextra -Werror -std=c++98
-SRCS=	main.cpp \
-		contact.cpp \
-		phonebook.cpp
-OBJS=$(SRCS:.cpp=.o)
+NAME		:=	phonebook
+CXX			:=	c++
+CXXFLAGS	:=	-Wall -Wextra -Werror -MMD -std=c++98
+SRCS		:=	main.cpp \
+				Contact.cpp \
+				PhoneBook.cpp
+DEPS		:=	$(SRCS:.cpp=.d)
+OBJS		:=	$(SRCS:.cpp=.o)
+INCS		:= 	Contact.hpp \
+        		PhoneBook.hpp
+
+
 $(NAME): $(OBJS)
-	$(CC) $(CFLAGS) -o $(NAME) $(OBJS)
+	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
+
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
 all: $(NAME)
+$(OBJS): $(SRCS) $(INCS)
+
 clean:
 	rm -f $(OBJS)
+	rm -f $(DEPS)
+
 fclean: clean
 	rm -f $(NAME)
+
 re: fclean all
+
+-include $(DEPS)
+
 .PHONY: all clean fclean re
