format to microsoft style

--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -4,7 +4,9 @@ CXXFLAGS    :=  -Wall -Wextra -Werror -MMD -std=c++98
 SRCS        :=  main.cpp \
                 Bureaucrat.cpp \
                 AForm.cpp \
-								ShrubberyCreationForm.cpp
+								ShrubberyCreationForm.cpp \
+								RobotomyRequestForm.cpp \
+								PresidentialPardonForm.cpp
 
 DEPS        :=  $(SRCS:.cpp=.d)
 OBJS        :=  $(SRCS:.cpp=.o)
