--- a/cpp09/.vscode/launch.json
+++ b/cpp09/.vscode/launch.json
@@ -8,11 +8,11 @@
       "type": "lldb",
       "request": "launch",
       "name": "Debug",
-      "program": "${workspaceFolder}/cpp09/ex00/btc",
+      "program": "${workspaceFolder}/ex00/btc",
       "args": [
         "input.txt"
       ],
-      "cwd": "${workspaceFolder}/cpp09/ex00/"
+      "cwd": "${workspaceFolder}/ex00"
     }
   ]
 }
