--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -1,6 +1,6 @@
 NAME        :=  PmergeMe
 CXX         :=  c++
-CXXFLAGS    :=  -Wall -Wextra -Werror -MMD -std=c++98
+CXXFLAGS    :=  -Wall -Wextra -Werror -MMD -std=c++98 -g3
 SRCS        :=  main.cpp \
 								PmergeMe.cpp
 
